--- a/src/styles/common/index.scss
+++ b/src/styles/common/index.scss
@@ -149,8 +149,8 @@ transition: transform 0.7s;
 .circle-photo__block{
     height: 142px;
     width: 142px;
-    background-position-x: 47%;
-    background-position-y: 32%;
+    background-position-y: 43%;
+    background-size: cover;
     border-radius: 50%;
 }
 .autoriz-block-photo-block{
