--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -10,11 +10,11 @@ block content
                         h1.title.about__intro-title Обо мне
                             .title__img
                                 +icon('icon-about_header')
-                        .about__intro-img-block(style='background-image:url(styles/images/myPhoto.jpg)')
-                            img.about__intro-img(src="styles/images/myPhoto.jpg", alt="myPhoto2").visuallyhidden
+                        .about__intro-img-block(style='background-image:url(styles/images/myPhoto2.jpg)')
+                            img.about__intro-img(src="styles/images/myPhoto2.jpg", alt="myPhoto2").visuallyhidden
                         .about__intro-text.about__text
                             h2.about__text-title Кто я
-                            p.about__text-paragraf Я веб разработчик из Алушты. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+                            p.about__text-paragraf Я веб разработчик из Алушты. Мне 22 года. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
                             p.about__text-paragraf Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
             .about__section.about__section_skills
                 .about__wrapper.about__wrapper-skills
@@ -97,7 +97,7 @@ block content
                             a(href="mail:washerd2008@gmail.com").address__link washerd2008@gmail.com
                                 +icon('icon-envelope')
                         li.address__item
-                            a(href="tel:79788434707").address__link +7 (978) 843 47 07
+                            a(href="tel:79788434707").address__link +7 (978) 843 47 07(telegram)
                                 +icon('icon-phone')
                         li.address__item
                             a(href="https://www.google.com/maps/@44.6841801,34.4045846,15z").address__link г.Алушта, ул Туристов, д29
